# frechet_distance

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh
src/: calc_frechet_distance.cpp  certificate.cpp  certificate.h  compare_implementations.cpp  create_benchmark.cpp  create_benchmark_decider.cpp  curve.cpp  curve.h  defs.h  export_freespace_diagram.cpp  filter.cpp  filter.h  frechet_abstract.h  frechet_light.cpp  frechet_light.h  frechet_light_types.h  frechet_naive.cpp  frechet_naive.h  freespace_light_vis.cpp  freespace_light_vis.h  geometry_basics.cpp  geometry_basics.h  id.h  kdtree.h  layer_queue.h  main.cpp  orth_range_search.cpp  orth_range_search.h  paper_experiments.cpp  parser.cpp  parser.h  performance_test.cpp  priority_search_tree.h  pruning_progress.cpp  query.cpp  query.h  query_helper.h  range.h  range_tree.h  run_tests.cpp  (+5 more)
test_data/: queries_small.txt
test_data/benchmark/: README  character_converter.m  fetch_and_convert_data.py  fetch_and_convert_data.sh  geolife_converter.py
test_data/decider_benchmark_queries/: characters_query_decider_10_-10_minus.txt  characters_query_decider_10_-10_plus.txt  characters_query_decider_10_-1_minus.txt  characters_query_decider_10_-1_plus.txt  characters_query_decider_10_-2_minus.txt  characters_query_decider_10_-2_plus.txt  characters_query_decider_10_-3_minus.txt  characters_query_decider_10_-3_plus.txt  characters_query_decider_10_-4_minus.txt  characters_query_decider_10_-4_plus.txt  characters_query_decider_10_-5_minus.txt  characters_query_decider_10_-5_plus.txt  characters_query_decider_10_-6_minus.txt  characters_query_decider_10_-6_plus.txt  characters_query_decider_10_-7_minus.txt  characters_query_decider_10_-7_plus.txt  characters_query_decider_10_-8_minus.txt  characters_query_decider_10_-8_plus.txt  characters_query_decider_10_-9_minus.txt  characters_query_decider_10_-9_plus.txt  characters_query_decider_10_0_plus.txt  characters_query_decider_10_1_plus.txt  characters_query_decider_10_2_plus.txt  characters_query_decider_11_-10_minus.txt  characters_query_decider_11_-10_plus.txt  characters_query_decider_11_-1_minus.txt  characters_query_decider_11_-1_plus.txt  characters_query_decider_11_-2_minus.txt  characters_query_decider_11_-2_plus.txt  characters_query_decider_11_-3_minus.txt  characters_query_decider_11_-3_plus.txt  characters_query_decider_11_-4_minus.txt  characters_query_decider_11_-4_plus.txt  characters_query_decider_11_-5_minus.txt  characters_query_decider_11_-5_plus.txt  characters_query_decider_11_-6_minus.txt  characters_query_decider_11_-6_plus.txt  characters_query_decider_11_-7_minus.txt  characters_query_decider_11_-7_plus.txt  characters_query_decider_11_-8_minus.txt  (+857 more)
tools/: compare_implementations_all.sh  makepicsgeolife.sh  run_all_benchmarks.sh
